--- a/ChessFabrickFormsApp/ChessFabrickFormsApp.csproj
+++ b/ChessFabrickFormsApp/ChessFabrickFormsApp.csproj
@@ -55,7 +55,7 @@
     <Compile Include="ChessForm.Designer.cs">
       <DependentUpon>ChessForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="FigureImageUtils.cs" />
+    <Compile Include="PieceImageUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ChessFieldBox.resx">
