--- a/ChessFabrickWeb/appsettings.Development.json
+++ b/ChessFabrickWeb/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "zasveljudezakonkrut"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
