--- a/ChessFabrickWeb/ChessFabrickWeb.csproj
+++ b/ChessFabrickWeb/ChessFabrickWeb.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.Kestrel" Version="4.0.464" />
     <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="4.0.464" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
