--- a/ChessFabrickFormsApp/packages.config
+++ b/ChessFabrickFormsApp/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net472" />
+  <package id="Fody" version="6.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="3.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Connections.Client" version="3.1.0" targetFramework="net472" />
