--- a/ChessFabrickCommons/ChessFabrickCommons.csproj
+++ b/ChessFabrickCommons/ChessFabrickCommons.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ServiceFabric.Actors" Version="4.0.464" />
     <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="4.0.464" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
