--- a/ChessFabrickSignaler/ChessFabrickSignaler.csproj
+++ b/ChessFabrickSignaler/ChessFabrickSignaler.csproj
@@ -19,6 +19,10 @@
     <ProjectReference Include="..\ChessFabrickCommons\ChessFabrickCommons.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 
 
 </Project>
