--- a/ChessFabrickFormsApp/ChessFabrickFormsApp.csproj
+++ b/ChessFabrickFormsApp/ChessFabrickFormsApp.csproj
@@ -54,6 +54,9 @@
   <PropertyGroup>
     <ApplicationIcon>ChessFabrick.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Costura, Version=4.1.0.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
       <HintPath>..\packages\Costura.Fody.4.1.0\lib\net40\Costura.dll</HintPath>
